--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": " ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "cross-env": "^7.0.3",
     "framer-motion": "^6.5.1",
     "next": "12.3.0",
     "react": "18.2.0",
@@ -21,6 +25,7 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.3.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0"
   }
