--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.10.4",
     "cross-env": "^7.0.3",
     "framer-motion": "^6.5.1",
+    "gsap": "^3.11.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
