--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@vercel/analytics": "^0.1.5",
     "cross-env": "^7.0.3",
     "next": "12.3.0",
     "react": "18.2.0",
