--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@emotion/styled": "^11.10.4",
     "@vercel/analytics": "^0.1.5",
     "cross-env": "^7.0.3",
+    "framer-motion": "^7.6.9",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.0",
